@@ -1,3 +1,6 @@
+20010629
+ - (bal) Removed net_aton() since we don't use it any more
+
 20010628
  - (djm) Sync openbsd-compat with -current libc
  - (djm) Fix from Lutz Jaenicke <Lutz.Jaenicke@aet.TU-Cottbus.DE> for my 
@@ -5816,4 +5819,4 @@
  - Wrote replacements for strlcpy and mkdtemp
  - Released 1.0pre1
 
-$Id: ChangeLog,v 1.1338 2001/06/28 23:27:37 mouring Exp $
+$Id: ChangeLog,v 1.1339 2001/06/29 12:32:31 mouring Exp $
